<resources>
    <string name="rino_user_user_agreement_url">https://integration.rinoiot.com/ServiceAgreement.html?language=en_US</string>
    <string name="rino_user_privacy_policy_url">https://integration.rinoiot.com/PrivacyPolicy.html?language=en_US</string>
    <string name="rino_mine_alexa_voice_guide">https://integration.rinoiot.com/connectAlexaEn</string>
    <string name="rino_mine_google_assistant_voice_guide">https://integration.rinoiot.com/googleAssistantEn</string>
    <string name="rino_mine_voice_eg">1.  Alexa,turn on/off living room light.\n\n2.  Alexa,set living room light to 50 percent.\n\n3.  Alexa,brighten/dim living room light.\n\n4.  Alexa,set living room light to christmas mode.</string>
    <string name="rino_mine_voice_google_assistant_eg">1. Ok Google, turn on bedroom light.\n\n2. Ok Google, turn off bedroom light.\n\n3. Ok Google, set bedroom light to 50 percent.\n\n4. Ok Google, brighten bedroom light.</string>
    <string name="rino_common_permission_wifi_info">In order to use the app normally you must open all permissions, click agree</string>
    <string name="rino_common_permission_opened">opened</string>
    <string name="rino_common_permission_go_to_open">go to open</string>
    <string name="rino_common_permission_denied_desc">Permissions to access %1s is not allowed.Please turn on this permission in the settings</string>
    <string name="rino_common_permission_location">Location</string>
    <string name="rino_common_permission_storage">storage</string>
    <string name="rino_common_permission_camera">Camera</string>
    <string name="rino_common_ble_permission">Allow "Bluetooth" permission</string>
    <string name="rino_common_ble_nearby_permission">Allow "Nearby Devices" permission</string>
    <string name="rino_common_open_system_ble_permission">Turn on Bluetooth (or try again)</string>
    <string name="rino_common_permission_title">Rino Smart App requests the following permissions</string>
    <string name="rino_common_access_location">Location</string>
    <string name="rino_common_access_location_tips">Use to search for nearby devices, display WiFi names, and automate scenes</string>
    <string name="rino_common_media_files">Media file</string>
    <string name="rino_common_media_files_tips">Use to access files such as device-related pictures, audio, and video</string>
    <string name="rino_common_camera">Photograph</string>
    <string name="rino_common_camera_tips">Use to scanning, taking photos, recording videos, etc</string>
    <string name="rino_common_wifi_password">WiFi password</string>
    <string name="rino_common_wifi_ssid">WiFi SSID</string>
    <string name="pairing_code_hint">The 11- or 21-digit pairing code may be on the device. If not, you can setup with manufacturer</string>
    <string name="pairing_code">Pairing code</string>
    <string name="enter_matter_pairing_code">Enter Matter pairing code</string>
    <string name="scan_matter_qr_code">Scan Matter QR code</string>
    <string name="scanner_hint">Make sure it\'s steady and well-lit</string>
    <string name="set_up_without_qr_code">Set up without QR code</string>
    <string name="wifi_credentials_title">WiFi Credentials?</string>
    <string name="wifi_network_band_hint">Device pairing only supports 2.4GHz WiFi bands. Connect your phone to a 2.GHz and enter the respective credentials</string>
    <string name="rino_common_family_management">Family Management</string>
    <string name="rino_common_home">Home</string>
    <string name="rino_common_household">Household</string>
    <string name="rino_common_energy">Energy</string>
    <string name="rino_common_monitor">Monitor</string>
    <string name="rino_common_set_up">Set up</string>
    <string name="rino_common_settings">Settings</string>
    <string name="rino_common_information">Information</string>
    <string name="rino_common_delete">Delete</string>
    <string name="rino_device_all">All devices</string>
    <string name="request_location">The system needs to locate the permission scene settings</string>
    <string name="active_connect">Connect</string>
    <string name="active_input_pwd">Please input  %s password</string>
    <string name="please_input_password">Please Input Password</string>
    <string name="rino_app_name">Rino Smart</string>
    <string name="rino_common_confirm">Confirm</string>
    <string name="rino_common_finish">OK</string>
    <string name="rino_common_second_unit">Second</string>
    <string name="rino_common_minutes_unit">Mins</string>
    <string name="rino_common_hour_unit">Hour</string>
    <string name="rino_common_family_manager">Home</string>
    <string name="rino_common_notify_center">Message</string>
    <string name="rino_common_faq">FAQ</string>
    <string name="rino_common_customer_service">CS</string>
    <string name="rino_common_save">Save</string>
    <string name="rino_common_city_locating">Locating </string>
    <string name="rino_common_unit_minute">Mins</string>
    <string name="rino_common_unit_hour">Hour</string>
    <string name="rino_common_no_data_title">No Data Exist</string>
    <string name="rino_common_done">OK</string>
    <string name="rino_common_save_success">Save Success</string>
    <string name="rino_common_close">Close</string>
    <string name="rino_common_skip">Skip</string>
    <string name="rino_common_next">Next</string>
    <string name="rino_common_hits">Notification</string>
    <string name="rino_common_loading">Loading</string>
    <string name="rino_common_continue">Continue</string>
    <string name="rino_common_latest_version">Already latest version</string>
    <string name="rino_common_update">Update</string>
    <string name="rino_common_update_tip_title">Update  to % version</string>
    <string name="rino_common_permission_tip_read_set">Please enable system permission</string>
    <string name="rino_common_download_failed">Download failed</string>
    <string name="rino_common_version_check">Check updates</string>
    <string name="rino_common_old_version">Version  %1s</string>
    <string name="rino_common_back">Back</string>
    <string name="rino_common_refresh">Refresh</string>
    <string name="rino_common_alert_title">Alert</string>
    <string name="rino_common_add">Add</string>
    <string name="rino_common_manual_add">Add manually</string>
    <string name="rino_common_input_device_id">Input device id</string>
    <string name="rino_common_copy">Copy</string>
    <string name="rino_common_permission_denied">No permission</string>
    <string name="rino_common_request_camera">Camera permission required</string>
    <string name="rino_common_operation_success">Success</string>
    <string name="rino_common_operation_failure">Fail</string>
    <string name="rino_common_go_setting">Setup</string>
    <string name="rino_common_no_permissions_tips">No permissions</string>
    <string name="rino_common_copy_success">Copied</string>
    <string name="rino_common_scan_failure">Unknown error</string>
    <string name="rino_common_edit">Edit</string>
    <string name="rino_system_permissions_camera_title">Access to camera permissions</string>
    <string name="rino_system_permissions_camera_desc">Used for scanning, etc.</string>
    <string name="rino_common_network_unavailable">Current network is not available</string>
    <string name="rino_common_permission_rationale">In order to use the app normally you must open all permissions, click agree</string>
    <string name="rino_common_open_setting_permission">You have denied some permissions, now go to change the settings?</string>
    <string name="rino_common_nfc_phone_not_support">Failure reason: Bluetooth is not supported</string>
    <string name="rino_common_cope_succeuss">Copy successfully</string>
    <string name="rino_common_search_address">Search address</string>
    <string name="rino_common_second_unit_simple">h</string>
    <string name="rino_common_minutes_unit_simple">m</string>
    <string name="rino_common_hour_unit__simple">s</string>
    <string name="rino_common_anonymous_title">No access yet, please log in!</string>
    <string name="rino_common_anonymous_voice">1.Third-Party Services</string>
    <string name="rino_common_anonymous_voice_desc">Third-Party Platforms</string>
    <string name="rino_common_anonymous_create_family">2.Create Home</string>
    <string name="rino_common_anonymous_create_family_desc">Support multiple families creation and invite members to join</string>
    <string name="rino_common_anonymous_cloud_storage">Data cloud storage</string>
    <string name="rino_common_anonymous_cloud_storage_desc">Device data store in cloud for easy synchronization</string>
    <string name="rino_common_ble_is_support">Support Bluetooth？</string>
    <string name="rino_common_ble_open">Whether the Bluetooth is turned on？</string>
    <string name="rino_common_and">And</string>
    <string name="rino_common_agree_tip">Agree</string>
    <string name="rino_common_decline">Decline</string>
    <string name="rino_user_input_verify_code">Enter the verification code</string>
    <string name="rino_user_resend">Resend</string>
    <string name="rino_user_unable_accept_email_code">Didn\'t receive the verification code?</string>
    <string name="rino_user_get_verify_code">Get verification code</string>
    <string name="rino_user_set_password">Set password</string>
    <string name="rino_user_input_password">Enter your password</string>
    <string name="rino_user_retrieve_password">Retrieve password</string>
    <string name="rino_user_login_forget_title">Forgot your password</string>
    <string name="rino_user_login_account_tip_title">Please enter your account</string>
    <string name="rino_user_cancel_account_get_verify_code">Click "Get Verification Code" and the verification code will be sent to your %1s</string>
    <string name="rino_user_not_receive_verify_code_desc1">If you do not receive the verification code, we recommend you to confirm the following actions.</string>
    <string name="rino_user_not_receive_verify_code_desc2">1. Please check if the country/region on the App registration page is selected correctly</string>
    <string name="rino_user_not_receive_verify_code_desc3">2. Please check whether your phone is off or no network</string>
    <string name="rino_user_not_receive_verify_code_desc4">3. Please check if the number/email you entered is correct</string>
    <string name="rino_user_not_receive_verify_code_desc5">4. Please check whether your verification code is blocked or quarantined by the system</string>
    <string name="rino_user_not_receive_verify_code_desc6">If the above confirmation is correct, or you cannot receive the verification code, can send email to accountapp@rinoiot.com</string>
    <string name="rino_user_been_sent_code">Please enter the 4-digit verification code sent to %1s, valid for 10 minutes</string>
    <string name="rino_family_continue_edit">Continue</string>
    <string name="rino_family_exit">Exit</string>
    <string name="rino_family_exit_title">The Home you are currently creating has not been saved, do you want to exit?</string>
    <string name="rino_family_is_join_family">Do you want to join this home?</string>
    <string name="rino_family_join_family">Yes</string>
    <string name="rino_family_not_join_family">Later</string>
    <string name="rino_family_reject_join">Refuse to join</string>
    <string name="rino_mine_set_account_verification">Account verification</string>
    <string name="rino_voice_unbind_alexa">Unbundled Amazon Alexa</string>
    <string name="rino_voice_bind_alexa_describe">Once bound, you can voice control your purchased device through the Amazon Echo series of speakers.</string>
    <string name="rino_voice_eg">For example:</string>
    <string name="rino_voice_auth">One-click authorization</string>
    <string name="rino_voice_guide">Manual binding tutorial</string>
    <string name="rino_voice_unbind">unbind</string>
</resources>