<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/dpp_40"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dpp_40"
                android:text="@string/rino_user_not_receive_verify_code_desc1"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/spp_15"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dpp_40"
                android:text="@string/rino_user_not_receive_verify_code_desc2"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/spp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dpp_40"
                android:text="@string/rino_user_not_receive_verify_code_desc3"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/spp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dpp_40"
                android:text="@string/rino_user_not_receive_verify_code_desc4"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/spp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dpp_40"
                android:text="@string/rino_user_not_receive_verify_code_desc5"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/spp_14" />

            <TextView
                android:id="@+id/tv_verify_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dpp_40"
                android:text="@string/rino_user_not_receive_verify_code_desc6"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/spp_14" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>