<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dpp_100"
        android:layout_marginStart="@dimen/dpp_100"
        android:text="@string/rino_mine_set_account_verification"
        android:textColor="@color/c_333333"
        android:textSize="@dimen/spp_26"/>

    <TextView
        android:id="@+id/tv_send_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:layout_marginTop="@dimen/dpp_50"
        android:text="@string/rino_user_cancel_account_get_verify_code"
        android:textSize="@dimen/spp_14"
        android:textColor="@color/f_666666" />

    <TextView
        android:id="@+id/tv_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpp_100"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:layout_marginTop="@dimen/dpp_200"
        android:background="@drawable/shape_btn_bg_main_theme_8"
        android:gravity="center"
        android:text="@string/rino_user_get_verify_code"
        android:textColor="@color/white"
        android:textSize="@dimen/spp_18"/>
</LinearLayout>