<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_item_10"
    android:orientation="vertical"
    android:padding="@dimen/dpp_70">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/tv16SpCenterStyle"
        android:text="@string/rino_family_exit_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dpp_30"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_cen_dialog_cancel"
            android:gravity="center"
            android:padding="@dimen/dpp_30"
            android:text="@string/rino_family_continue_edit"
            android:textColor="@color/_xpopup_content_color"
            android:textSize="@dimen/spp_20" />


        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dpp_40"
            android:layout_weight="1"
            android:background="@drawable/shape_cen_dialog_confirm"
            android:gravity="center"
            android:padding="@dimen/dpp_30"
            android:text="@string/rino_family_exit"
            android:textColor="@color/_xpopup_content_color"
            android:textSize="@dimen/spp_20" />

    </LinearLayout>

</LinearLayout>