<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dpp_100"
        android:layout_marginStart="@dimen/dpp_100"
        android:text="@string/rino_user_set_password"
        android:textColor="@color/c_333333"
        android:textSize="@dimen/spp_26"/>

    <com.smart.rinoiot.common.view.CustomEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpp_100"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:layout_marginTop="@dimen/dpp_120"
        app:hintText="@string/rino_user_input_password"
        app:isPassword="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:background="@color/f_d4d4d4" />


    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpp_100"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:layout_marginTop="@dimen/dpp_80"
        android:background="@drawable/shape_btn_bg_main_theme_8"
        android:gravity="center"
        android:text="@string/rino_common_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/spp_18"/>
</LinearLayout>