<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dpp_100"
        android:layout_marginStart="@dimen/dpp_100"
        android:text="@string/rino_user_input_verify_code"
        android:textColor="@color/c_333333"
        android:textSize="@dimen/spp_26"/>

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:layout_marginTop="@dimen/dpp_50"
        android:text="@string/rino_user_been_sent_code"
        android:textSize="@dimen/spp_14"
        android:textColor="@color/f_666666" />

    <com.wynsbin.vciv.VerificationCodeInputView
        android:id="@+id/codeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dpp_64"
        android:layout_marginLeft="@dimen/dpp_100"
        android:layout_marginRight="@dimen/dpp_100"
        app:vciv_et_background="@drawable/shape_code_input_normal"
        app:vciv_et_cursor_color="@color/main_theme_color"
        app:vciv_et_foucs_background="@drawable/shape_code_input_foucs"
        app:vciv_et_width="@dimen/dpp_88"
        app:vciv_et_height="@dimen/dpp_88"
        app:vciv_et_inputType="number"
        app:vciv_et_number="4"
        app:vciv_et_text_color="@color/c_333333"
        app:vciv_et_text_size="@dimen/spp_18"
        app:vciv_et_underline_show="false" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dpp_40"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:text="@string/rino_user_resend"
        android:textSize="@dimen/spp_14"
        android:textColor="@color/c_A5A5A5" />

    <TextView
        android:id="@+id/tvChangeRegisterOfWay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dpp_40"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:text="@string/rino_user_unable_accept_email_code"
        android:textColor="@color/main_theme_color"
        android:textSize="@dimen/spp_14"/>
</LinearLayout>