<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dpp_100"
        android:layout_marginStart="@dimen/dpp_100"
        android:text="@string/rino_user_login_forget_title"
        android:textColor="@color/c_333333"
        android:textSize="@dimen/spp_26"/>

    <LinearLayout
        android:id="@+id/viewCountry"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpp_100"
        android:layout_marginTop="@dimen/dpp_70"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvCountryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/f_535353"
            android:textSize="@dimen/spp_19"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:background="@color/f_d4d4d4" />

    <com.smart.rinoiot.common.view.CustomEditText
        android:id="@+id/etAccount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpp_100"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        app:hintText="@string/rino_user_login_account_tip_title"
        app:isPassword="false" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:background="@color/f_d4d4d4" />

    <TextView
        android:id="@+id/tvFindPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpp_100"
        android:layout_marginStart="@dimen/dpp_100"
        android:layout_marginEnd="@dimen/dpp_100"
        android:layout_marginTop="@dimen/dpp_60"
        android:background="@drawable/shape_btn_bg_main_theme_8"
        android:gravity="center"
        android:text="@string/rino_user_retrieve_password"
        android:textColor="@color/white"
        android:textSize="@dimen/spp_18"/>

</LinearLayout>